# ios-runner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  extension.toml  install-dev.sh
.github/workflows/: ci.yml  publish-zed-extension.yml  release-cli.yml
CocoaPodsDemo/: .gitignore  Podfile  README.md  project.yml
CocoaPodsDemo/CocoaPodsDemo.xcodeproj/: project.pbxproj
CocoaPodsDemo/Sources/: CocoaPodsDemoApp.swift
XcodePilotDemo/: .gitignore  .ios-runner.toml  .xcode-pilot.toml  README.md  project.yml
XcodePilotDemo/.zed/: tasks.json
XcodePilotDemo/Sources/: XcodePilotDemoApp.swift
XcodePilotDemo/XcodePilotDemo.xcodeproj/: project.pbxproj
crates/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp.rs
crates/core/: Cargo.toml
crates/core/src/: bootstrap.rs  build_diagnostics.rs  build_settings.rs  config.rs  configure.rs  destination.rs  detect.rs  device.rs  ensure.rs  global_store.rs  global_tasks.rs  lib.rs  locale.rs  platform.rs  prompt.rs  simulator.rs  switch.rs  tasks.rs  terminal_ui.rs  uninstall.rs  util.rs  xcodebuild.rs  zed_keymap.rs
docs/: AGENTS.md  DEVELOPMENT.md  NEW_USER.md  OPTIMIZATION_PROPOSALS_REVIEW.md  PUBLISHING.md  QUICKSTART.md  REVIEW_FIXES.md  SECURITY_AND_PRIVACY.md  SWEETPAD_REFERENCE.md  USER_EXPERIENCE.md  ZED_DEV_EXTENSION.md  ZED_UX.md
scripts/: bootstrap-zed-user.sh  bump-version.sh  bundle-cli-for-extension.sh  check-release-readiness.sh  install-cli.sh  install.sh  preflight.sh  release.sh  simulate-fresh-install.sh  smoke-test-demo.sh  sync-embedded-global-tasks.sh  sync-extension-embeds.sh  update-zed-extensions-pr.sh
src/: embedded_global_tasks.json  embedded_keymap_entry.json  lib.rs
templates/: global-config.toml.example  ios-runner.toml.example  xcode-pilot.toml.example
