# Zed 扩展包（单独编译为 wasm32-wasip2，不要与 CLI 放在同一 workspace）
[package]
name = "xcode-pilot-extension"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-username/xcode-pilot"
description = "Zed extension for Xcode Pilot"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# 与当前 Zed 版本匹配；若仍编译失败可改为 "0.6"
zed_extension_api = "0.7.0"
