# Zed 扩展包（单独编译为 wasm32-wasip2，不要与 CLI 放在同一 workspace）
[package]
name = "ios-runner-extension"
version = "0.3.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/buds520/ios-runner"
description = "Zed extension: iOS-Runner"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
zed_extension_api = "0.7.0"
