[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/buds520/ios-runner"
version = "0.3.5"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
ios-runner-core = { path = "core" }
