[package]
name = "xcode-pilot-cli"
description = "CLI for Xcode Pilot — build and run iOS Xcode projects from Zed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xcode-pilot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
xcode-pilot-core.workspace = true
