[package]
name = "ios-runner-cli"
description = "CLI for iOS-Runner — build and run iOS Xcode projects from Zed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ios-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = "6.0"
serde.workspace = true
serde_json.workspace = true
ios-runner-core.workspace = true
