[package]
name = "xcode-pilot-core"
description = "Core logic for Xcode Pilot (project detection, xcodebuild, Zed tasks)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
