[package]
name = "ios-runner-core"
description = "Core logic for iOS-Runner (project detection, xcodebuild, Zed tasks)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dirs = "6.0"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
